--- a/ShibugakiViewer/Views/Pages/SearchPage.xaml
+++ b/ShibugakiViewer/Views/Pages/SearchPage.xaml
@@ -6,6 +6,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShibugakiViewer.Views.Pages"
              xmlns:behaviors="clr-namespace:ShibugakiViewer.Views.Behaviors"
+             xmlns:xb="clr-namespace:Boredbone.XamlTools.Behaviors;assembly=WpfTools"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" 
              xmlns:search="clr-namespace:ImageLibrary.Search;assembly=ImageLibrary"
@@ -271,7 +272,7 @@
                             Background="#80FFFFFF"
                             FontSize="{StaticResource NormalTextSize}"
                             VerticalAlignment="Bottom"
-                            behaviors:TextBoxBehavior.UpdateByReturn="True"
+                            xb:TextBoxBehavior.UpdateByReturn="True"
                             />
                     </Grid>
                 </Grid>
