--- a/ShibugakiViewer/Views/SettingPages/SearchSettingPage.xaml
+++ b/ShibugakiViewer/Views/SettingPages/SearchSettingPage.xaml
@@ -127,7 +127,7 @@
 
 
 
-                <GroupBox Header="{x:Static properties:Resources.Search}">
+                <GroupBox Header="{x:Static properties:Resources.SearchLabel}">
                     <StackPanel>
 
                         <CheckBox 
