--- a/ShibugakiViewer/Views/SettingPages/SearchSettingPage.xaml
+++ b/ShibugakiViewer/Views/SettingPages/SearchSettingPage.xaml
@@ -122,6 +122,16 @@
                                 </ComboBoxItem>
                             </ComboBox>
                         </Grid>
+
+                        <CheckBox 
+                            IsChecked="{Binding IsCheckFileShellInformation.Value,Mode=TwoWay}">
+                            <TextBlock TextWrapping="Wrap">
+                                <Run Text="{x:Static properties:Resources.CheckFileShellInformationLabel2}"/>
+                                <LineBreak/>
+                                <Run Text="{x:Static properties:Resources.CheckFileShellInformationLabel3}"/>
+                            </TextBlock>
+                        </CheckBox>
+
                     </StackPanel>
                 </GroupBox>
 
