--- a/ShibugakiViewer/Views/Controls/ScrollImageViewer.xaml
+++ b/ShibugakiViewer/Views/Controls/ScrollImageViewer.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShibugakiViewer.Views.Controls"
              xmlns:b="clr-namespace:ShibugakiViewer.Views.Behaviors"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              x:Name="scrollImageViewer" 
              DataContextChanged="scrollImageViewer_DataContextChanged"
              Loaded="scrollImageViewer_Loaded"
