--- a/ShibugakiViewer/Views/Controls/SearchCriteriaControl.xaml
+++ b/ShibugakiViewer/Views/Controls/SearchCriteriaControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShibugakiViewer.Views.Controls"
              xmlns:b="clr-namespace:ShibugakiViewer.Views.Behaviors"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              xmlns:properties="clr-namespace:ShibugakiViewer.Properties"
              xmlns:cc="clr-namespace:WpfTools.Controls;assembly=WpfTools"
