--- a/ShibugakiViewer/Views/Controls/SearchList.xaml
+++ b/ShibugakiViewer/Views/Controls/SearchList.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShibugakiViewer.Views.Controls"
              xmlns:behaviors="clr-namespace:ShibugakiViewer.Views.Behaviors"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" 
              xmlns:search="clr-namespace:ImageLibrary.Search;assembly=ImageLibrary"
              xmlns:properties="clr-namespace:ShibugakiViewer.Properties"
