--- a/ShibugakiViewer/Views/Controls/TagSelector.xaml
+++ b/ShibugakiViewer/Views/Controls/TagSelector.xaml
@@ -9,7 +9,7 @@
              xmlns:converter="clr-namespace:ShibugakiViewer.Views.Converters"
              xmlns:tb="clr-namespace:WpfTools.Behaviors;assembly=WpfTools"
              xmlns:cc="clr-namespace:WpfTools.Controls;assembly=WpfTools"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              IsEnabledChanged="UserControl_IsEnabledChanged"
