--- a/ShibugakiViewer/Views/InformationPanes/ToolsPage.xaml
+++ b/ShibugakiViewer/Views/InformationPanes/ToolsPage.xaml
@@ -9,7 +9,7 @@
              xmlns:tb="clr-namespace:WpfTools.Behaviors;assembly=WpfTools"
              xmlns:cc="clr-namespace:WpfTools.Controls;assembly=WpfTools"
              xmlns:b="clr-namespace:ShibugakiViewer.Views.Behaviors"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
