--- a/ShibugakiViewer/Views/Pages/CatalogPage.xaml
+++ b/ShibugakiViewer/Views/Pages/CatalogPage.xaml
@@ -7,7 +7,7 @@
              xmlns:behaviors="clr-namespace:ShibugakiViewer.Views.Behaviors"
              xmlns:tb="clr-namespace:WpfTools.Behaviors;assembly=WpfTools"
              xmlns:local="clr-namespace:ShibugakiViewer.Views.Pages"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" 
              xmlns:control="clr-namespace:ShibugakiViewer.Views.Controls"
              xmlns:cc="clr-namespace:WpfTools.Controls;assembly=WpfTools"
