--- a/ShibugakiViewer/Views/Pages/ViewerPage.xaml
+++ b/ShibugakiViewer/Views/Pages/ViewerPage.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShibugakiViewer.Views.Pages"
              xmlns:b="clr-namespace:ShibugakiViewer.Views.Behaviors"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:control="clr-namespace:ShibugakiViewer.Views.Controls"
              xmlns:properties="clr-namespace:ShibugakiViewer.Properties"
              xmlns:converter="clr-namespace:ShibugakiViewer.Views.Converters"
