--- a/ShibugakiViewer/Views/Windows/ToolWindow.xaml
+++ b/ShibugakiViewer/Views/Windows/ToolWindow.xaml
@@ -12,7 +12,7 @@
         xmlns:tb="clr-namespace:WpfTools.Behaviors;assembly=WpfTools"
         xmlns:cc="clr-namespace:WpfTools.Controls;assembly=WpfTools"
         xmlns:b="clr-namespace:ShibugakiViewer.Views.Behaviors"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Title="{x:Static properties:Resources.DatabaseTool}"
         Height="600" Width="500"
