--- a/ShibugakiViewer/Views/Windows/WelcomeWindow.xaml
+++ b/ShibugakiViewer/Views/Windows/WelcomeWindow.xaml
@@ -11,7 +11,7 @@
         xmlns:tb="clr-namespace:WpfTools.Behaviors;assembly=WpfTools"
         xmlns:cc="clr-namespace:WpfTools.Controls;assembly=WpfTools"
         xmlns:b="clr-namespace:ShibugakiViewer.Views.Behaviors"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Style="{StaticResource DefaultWindowStyle}"
         Title="{StaticResource AppName}" Height="600" Width="500"
